--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@supabase/supabase-js": "^2.54.0",
     "next": "14.2.31",
     "next-themes": "^0.3.0",
+    "openai": "^5.12.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.14.11",
+    "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.41",
