--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "ielts-pages-router",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "concurrently \"next dev\" \"npm:dev:premium\"",
+    "dev:premium": "tailwindcss -i ./styles/premium.css -c tailwind.config.premium.js -o ./public/premium.css --watch",
+    "build": "npm run build:premium && next build",
+    "build:premium": "tailwindcss -i ./styles/premium.css -c tailwind.config.premium.js -o ./public/premium.css --minify",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pin:hash": "ts-node tools/hash-pin.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.55.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
     "groq-sdk": "^0.30.0",
@@ -26,9 +30,12 @@
   "devDependencies": {
     "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
-    "autoprefixer": "10.4.20",
-    "postcss": "8.4.41",
-    "tailwindcss": "3.4.10",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.1",
+    "eslint": "^8.57.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.2"
   }
 }
