--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
     "groq-sdk": "^0.30.0",
+    "stripe": "^14.0.0",
     "multiparty": "^4.2.3",
     "next": "14.2.31",
     "next-themes": "^0.3.0",
