--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multiparty": "^4.2.3",
     "next": "14.2.31",
     "next-themes": "^0.3.0",
+    "next-pwa": "^5.6.0",
     "openai": "^5.12.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
