--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "file-type": "^18.7.0",
     "groq-sdk": "^0.30.0",
     "stripe": "^14.0.0",
     "multiparty": "^4.2.3",
