chore: pin markdown and pwa dependencies

--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
-    "file-type": "^18.7.0",
+    "file-type": "18.7.0",
     "groq-sdk": "^0.30.0",
     "stripe": "^14.0.0",
     "multiparty": "^4.2.3",
     "next": "14.2.31",
     "next-themes": "^0.3.0",
-    "next-pwa": "^5.6.0",
+    "next-pwa": "5.6.0",
     "openai": "^5.12.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-markdown": "^9.0.0",
-    "rehype-highlight": "^6.0.0",
+    "react-markdown": "9.1.0",
+    "rehype-highlight": "6.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.8.0",
     "zod": "^3.25.76",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.19.10",
