fix: lockfile + .npmrc + env.ts + tailwind tokens

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-﻿node_modules
-.next
-.vercel
-.env
+﻿node_modules/
+.next/
+.turbo/
+*.log
+.env*
 .env.local
-.env.*.local
-npm-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.DS_Store
-
-.idea
-design-system.zip
-
-GramorX.zip
-*.tsbuildinfo
+public/sw.js
