--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
