--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_URL=https://your-supabase-url
+SUPABASE_SERVICE_KEY=your-service-key
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your-auth-token
+TWILIO_VERIFY_SERVICE_SID=VAXxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_WHATSAPP_FROM=+10000000000
 JAZZCASH_MERCHANT_ID=demo_merchant
 JAZZCASH_PASSWORD=demo_password
 JAZZCASH_SECRET=demo_secret
