--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,10 +6,7 @@
   "background_color": "#ffffff",
   "theme_color": "#0f172a",
   "icons": [
-    {
-      "src": "/brand/logo.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "/icon-192.svg", "sizes": "192x192", "type": "image/svg+xml" },
+    { "src": "/icon-512.svg", "sizes": "512x512", "type": "image/svg+xml" }
   ]
 }
