--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ EASYPAISA_STORE_ID=demo_store
 EASYPAISA_SECRET=demo_secret
 CARD_GATEWAY_API_KEY=demo_key
 CARD_GATEWAY_SECRET=demo_secret
+STRIPE_SECRET_KEY=sk_test_yourkey
+STRIPE_WEBHOOK_SECRET=whsec_yoursecret
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_yourkey
+NEXT_PUBLIC_STRIPE_PRICE_ROCKET=price_rocket
+NEXT_PUBLIC_STRIPE_PRICE_SEEDLING=price_seedling
