--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "pin:hash": "ts-node tools/hash-pin.ts",
     "diagnose": "powershell -ExecutionPolicy Bypass -File .\\\\tools\\\\report-build-issues.ps1",
-    "test": "tsx tools/run-tests.ts"
+    "test": "tsx tools/run-tests.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -53,6 +55,8 @@
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "@storybook/react": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17"
   }
 }
