--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "pin:hash": "ts-node tools/hash-pin.ts",
     "diagnose": "powershell -ExecutionPolicy Bypass -File .\\\\tools\\\\report-build-issues.ps1",
-    "test": "tsx tools/run-tests.ts"
+    "test": "tsx tools/run-tests.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -41,6 +43,19 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@mdx-js/react": "^2.3.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@storybook/addon-actions": "^7.6.20",
+    "@storybook/addon-backgrounds": "^7.6.20",
+    "@storybook/addon-essentials": "^7.6.20",
+    "@storybook/addon-toolbars": "^7.6.20",
+    "@storybook/addon-viewport": "^7.6.20",
+    "@storybook/blocks": "^7.6.20",
+    "@storybook/react": "^7.6.20",
+    "@storybook/theming": "^7.6.20",
     "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
