--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
     "groq-sdk": "^0.30.0",
+    "ioredis": "^5.7.0",
     "multiparty": "^4.2.3",
     "next": "14.2.31",
     "next-pwa": "5.6.0",
