--- a/package.json
+++ b/package.json
@@ -63,12 +63,16 @@
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.0.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.31",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "5.6.2"
+  },
+  "engines": {
+    "node": ">=20 <21",
+    "npm": ">=10 <11"
   }
 }
