--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,47 @@
 NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_IDLE_TIMEOUT_MINUTES=30
+NEXT_PUBLIC_DEBUG=
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 SUPABASE_URL=https://your-supabase-url
 SUPABASE_SERVICE_KEY=your-service-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+ADMIN_EMAILS=
+GOOGLE_GENERATIVE_AI_API_KEY=
+GROQ_API_KEY=
+GROQ_MODEL=
+OPENAI_API_KEY=
+OPENAI_MODEL=
+GEMINI_API_KEY=
+GEMINI_MODEL=
+GX_AI_PROVIDER=
+PREMIUM_MASTER_PIN=
+PREMIUM_PIN_HASH=
+PREMIUM_PIN_SALT=
+PREMIUM_PIN_RATE=
+PREMIUM_PIN_WINDOW_SEC=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+SPEAKING_DAILY_LIMIT=
+SPEAKING_BUCKET=
 TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_AUTH_TOKEN=your-auth-token
 TWILIO_VERIFY_SERVICE_SID=VAXxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_WHATSAPP_FROM=+10000000000
+LOCAL_ADMIN_TOKEN=
+ADMIN_API_TOKEN=
+SITE_URL=http://localhost:3000
+PORT=3000
+NODE_ENV=development
+REDIS_URL=
+RISK_THRESHOLD=0.8
+RISK_API_URL=
+NEXT_PUBLIC_MAX_RESEND_ATTEMPTS=3
+NEXT_PUBLIC_RESEND_COOLDOWN=30
+RESEND_API_KEY=
+BYPASS_STRICT_BUILD=
+PIN=
 JAZZCASH_MERCHANT_ID=demo_merchant
 JAZZCASH_PASSWORD=demo_password
 JAZZCASH_SECRET=demo_secret
