feat: add feature flag env vars

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ EASYPAISA_STORE_ID=demo_store
 EASYPAISA_SECRET=demo_secret
 CARD_GATEWAY_API_KEY=demo_key
 CARD_GATEWAY_SECRET=demo_secret
+
+# Feature flags
+NEXT_PUBLIC_FEATURE_TRIAL=true
+NEXT_PUBLIC_FEATURE_PAYWALL=true
+NEXT_PUBLIC_FEATURE_REFERRAL=false
+NEXT_PUBLIC_FEATURE_PARTNER=false
+NEXT_PUBLIC_FEATURE_PREDICTOR=true
+NEXT_PUBLIC_FEATURE_CHALLENGE=false
