--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,14 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_URL=https://your-supabase-url
 SUPABASE_SERVICE_KEY=your-service-key
+
+# Optional Twilio credentials
 TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_AUTH_TOKEN=your-auth-token
 TWILIO_VERIFY_SERVICE_SID=VAXxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_WHATSAPP_FROM=+10000000000
+# Set to "1" to bypass Twilio in local development
+# TWILIO_BYPASS=1
 JAZZCASH_MERCHANT_ID=demo_merchant
 JAZZCASH_PASSWORD=demo_password
 JAZZCASH_SECRET=demo_secret
