--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@storybook/blocks": "^7.6.20",
     "@storybook/react": "^7.6.20",
     "@storybook/theming": "^7.6.20",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
