--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formidable": "^3.5.4",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
+    "micro": "^10.0.1",
     "multiparty": "^4.2.3",
     "next": "14.2.31",
     "next-pwa": "5.6.0",
