--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "clsx": "^2.1.1",
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.12",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
+    "lucide-react": "^0.542.0",
     "micro": "^10.0.1",
     "multiparty": "^4.2.3",
     "next": "14.2.31",
