--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "9.1.0",
+    "recharts": "^3.1.2",
     "rehype-highlight": "6.0.0",
     "remark-gfm": "3.0.1",
     "stripe": "^14.0.0",
@@ -71,6 +72,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20.19.10",
     "@types/react": "18.2.66",
+    "@types/recharts": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
