--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,41 @@
 {
+  "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended"
-  ]
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "env": { "browser": true, "node": true, "es2022": true },
+  "settings": { "next": { "rootDir": ["./"] } },
+  "rules": {
+    "prettier/prettier": "error",
+    "prefer-const": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      {
+        "ts-ignore": "ban-ts-ignore",
+        "ts-nocheck": "ban-ts-nocheck",
+        "ts-check": false,
+        "ts-expect-error": "allow-with-description",
+        "minimumDescriptionLength": 6
+      }
+    ],
+    "@next/next/no-img-element": "warn"
+  },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "parserOptions": { "project": "./tsconfig.json" }
+    },
+    {
+      "files": ["scripts/**", "tools/**", "*.config.{js,ts}"],
+      "env": { "node": true }
+    }
+  ],
+  "ignorePatterns": ["node_modules/", ".next/", "public/", "coverage/"]
 }
