--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
   "engines": {
     "node": ">=20 <21",
     "npm": ">=10 <11"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["esbuild", "unrs-resolver"]
   }
 }
