--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build:premium": "tailwindcss -i ./styles/premium.css -c tailwind.config.premium.js -o ./public/premium.css --minify",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "pin:hash": "ts-node tools/hash-pin.ts",
     "diagnose": "powershell -ExecutionPolicy Bypass -File .\\\\tools\\\\report-build-issues.ps1",
     "test": "TWILIO_BYPASS=1 tsx tools/run-tests.ts",
@@ -18,7 +21,10 @@
     "gen:cert-template": "tsx scripts/generate_certificate_template.ts",
     "l10n:extract": "tsx scripts/l10n_extract.ts",
     "test:a11y": "vitest run tests/a11y/wcag-axe.test.ts",
-    "test:phase3": "vitest run tests/**/*.test.ts*"
+    "test:phase3": "vitest run tests/**/*.test.ts*",
+    "ci:lighthouse": "CHROME_PATH=\"$(node -p \"require('playwright-core').chromium.executablePath()\")\" lhci autorun --config=./lighthouserc.json",
+    "ci:a11y": "playwright test -c ./playwright.config.ts",
+    "ci:all": "start-server-and-test start http://localhost:3000 \"npm run ci:lighthouse && npm run ci:a11y\""
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -30,7 +36,6 @@
     "clsx": "^2.1.1",
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.12",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
     "lucide-react": "^0.542.0",
@@ -46,6 +51,7 @@
     "recharts": "^3.1.2",
     "rehype-highlight": "6.0.0",
     "remark-gfm": "3.0.1",
+    "sharp": "^0.34.3",
     "stripe": "^14.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -53,7 +59,10 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
+    "@lhci/cli": "^0.15.1",
     "@mdx-js/react": "^2.3.0",
+    "@playwright/test": "^1.55.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -71,7 +80,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20.19.10",
+    "@types/node": "^20.19.13",
     "@types/react": "18.2.66",
     "@types/recharts": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -81,7 +90,11 @@
     "concurrently": "^9.2.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.31",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "start-server-and-test": "^2.1.0",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
@@ -92,7 +105,12 @@
     "node": ">=20 <21",
     "npm": ">=10 <11"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": ["esbuild", "unrs-resolver"]
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": true,
+    "printWidth": 100,
+    "tabWidth": 2,
+    "endOfLine": "lf"
   }
 }
