--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "file-type": "18.7.0",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.12",
     "groq-sdk": "^0.30.0",
     "ioredis": "^5.7.0",
     "lucide-react": "^0.542.0",
